src/objects/Assoc_Affiliation_Membership__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assoc_Affiliation_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assoc Affiliation Code</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Assoc Affiliations Membership</relationshipLabel>
        <relationshipName>Assoc_Affiliations_Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assoc_Affiliation_ID__c</fullName>
        <label>Assoc Affiliation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assoc Affiliations Membership</relationshipLabel>
        <relationshipName>Assoc_Affiliations_Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related_GDP_Products_Account_View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>Assoc Affiliations Membership</relationshipLabel>
        <relationshipName>Assoc_Affiliations_Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebStar_ID__c</fullName>
        <externalId>true</externalId>
        <label>WebStar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Assoc Affiliation Membership</label>
    <nameField>
        <displayFormat>AAM-{00000}</displayFormat>
        <label>Assoc Affiliation Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assoc Affiliations Membership</pluralLabel>
    <recordTypes>
        <fullName>GDP</fullName>
        <active>true</active>
        <label>GDP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>